--- a/partner-application/index.html
+++ b/partner-application/index.html
@@ -1275,7 +1275,7 @@
 													data-netlify="true"
 													netlify
 
-														method="POTS" class="wpcf7-form init" aria-label="Contact form"
+														method="POST" class="wpcf7-form init" aria-label="Contact form"
 														novalidate="novalidate" data-status="init">
 														<div style="display: none;">
 															<input type="hidden" name="_wpcf7" value="572" />
