--- a/partner-application/index.html
+++ b/partner-application/index.html
@@ -1111,7 +1111,7 @@
                                              <p role="status" aria-live="polite" aria-atomic="true"></p>
                                              <ul></ul>
                                           </div>
-                                          <form name="ContactForm" netlify method="POST"
+                                          <!-- <form name="ContactForm" netlify method="POST"
                                              class="wpcf7-form init" aria-label="Contact form"
                                              novalidate="novalidate" data-status="init">
                                              <div style="display: none;">
@@ -1186,7 +1186,7 @@
 												<button type="submit">Submit</button>
                                              </p>
                                              <div class="wpcf7-response-output" aria-hidden="true"></div>
-                                          </form>
+                                          </form> -->
 
 										  <form name="contact" method="POST" data-netlify="true">
 											<p>
