--- a/partner-application/index.html
+++ b/partner-application/index.html
@@ -1188,7 +1188,7 @@
                                              <div class="wpcf7-response-output" aria-hidden="true"></div>
                                           </form> -->
 
-										  <form name="contact" method="POST" data-netlify="true">
+										  <form name="contact" method="POST" netlify>
 											<p>
 											  <label>Your Name: <input type="text" name="name" /></label>
 											</p>
