--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
 	</script>
 	<meta charset="UTF-8">
+	<link rel="icon" type="image/x-icon" href="/favicon.png">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0" />
 	<title>EngageR &#8211; The Ultimate Tool for Community Engagement and Brand Awareness</title>
 	<meta name='robots' content='max-image-preview:large' />
@@ -4033,10 +4034,11 @@
 																						}
 																					}
 
-																					blockquote{
-																						max-width: 250px; 
+																					blockquote {
+																						max-width: 250px;
 																						height: 600px;
 																					}
+
 																					.flickity-slider {
 																						width: 120% !important;
 																					}
@@ -4056,27 +4058,166 @@
 																					<div class="flickity-viewport">
 																						<div class="flickity-slider">
 																							<div class="cell"
-																								data-lazy="true"><blockquote  class="twitter-tweet" data-lang="en" data-theme="dark"><p lang="en" dir="ltr">What show? <a href="https://t.co/w1ccQIxtwL">pic.twitter.com/w1ccQIxtwL</a></p>&mdash; wild (tiktok) screenshots (@wildtiktokss) <a href="https://twitter.com/wildtiktokss/status/1683526075014365185?ref_src=twsrc%5Etfw">July 24, 2023</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+																								data-lazy="true">
+																								<blockquote
+																									class="twitter-tweet"
+																									data-lang="en"
+																									data-theme="dark">
+																									<p lang="en"
+																										dir="ltr">What
+																										show? <a
+																											href="https://t.co/w1ccQIxtwL">pic.twitter.com/w1ccQIxtwL</a>
+																									</p>&mdash; wild
+																									(tiktok) screenshots
+																									(@wildtiktokss) <a
+																										href="https://twitter.com/wildtiktokss/status/1683526075014365185?ref_src=twsrc%5Etfw">July
+																										24, 2023</a>
+																								</blockquote>
+																								<script async
+																									src="https://platform.twitter.com/widgets.js"
+																									charset="utf-8"></script>
 																							</div>
 																							<div class="cell"
-																								data-lazy="true"><blockquote  class="twitter-tweet" data-lang="en" data-theme="dark"><p lang="en" dir="ltr">does he not know how dangerous it is for the first letter of a website to be X?? <a href="https://t.co/tNed7OUUsY">https://t.co/tNed7OUUsY</a></p>&mdash; 𝕛𝕒𝕟𝕖𝕒 (@heyyitsjanea) <a  href="https://twitter.com/heyyitsjanea/status/1683208678126518274?ref_src=twsrc%5Etfw">July 23, 2023</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+																								data-lazy="true">
+																								<blockquote
+																									class="twitter-tweet"
+																									data-lang="en"
+																									data-theme="dark">
+																									<p lang="en"
+																										dir="ltr">does
+																										he not know how
+																										dangerous it is
+																										for the first
+																										letter of a
+																										website to be
+																										X?? <a
+																											href="https://t.co/tNed7OUUsY">https://t.co/tNed7OUUsY</a>
+																									</p>&mdash;
+																									𝕛𝕒𝕟𝕖𝕒
+																									(@heyyitsjanea) <a
+																										href="https://twitter.com/heyyitsjanea/status/1683208678126518274?ref_src=twsrc%5Etfw">July
+																										23, 2023</a>
+																								</blockquote>
+																								<script async
+																									src="https://platform.twitter.com/widgets.js"
+																									charset="utf-8"></script>
 																							</div>
 																							<div class="cell"
-																								data-lazy="true"><blockquote  class="twitter-tweet" data-lang="en" data-theme="dark"><p lang="und" dir="ltr">Go👇 <a href="https://t.co/FjN32NR7j9">pic.twitter.com/FjN32NR7j9</a></p>&mdash; Out of Context Human Race (@NoContextHumans) <a href="https://twitter.com/NoContextHumans/status/1683387268491362304?ref_src=twsrc%5Etfw">July 24, 2023</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+																								data-lazy="true">
+																								<blockquote
+																									class="twitter-tweet"
+																									data-lang="en"
+																									data-theme="dark">
+																									<p lang="und"
+																										dir="ltr">Go👇
+																										<a
+																											href="https://t.co/FjN32NR7j9">pic.twitter.com/FjN32NR7j9</a>
+																									</p>&mdash; Out of
+																									Context Human Race
+																									(@NoContextHumans)
+																									<a
+																										href="https://twitter.com/NoContextHumans/status/1683387268491362304?ref_src=twsrc%5Etfw">July
+																										24, 2023</a>
+																								</blockquote>
+																								<script async
+																									src="https://platform.twitter.com/widgets.js"
+																									charset="utf-8"></script>
 																							</div>
 																							<div class="cell"
-																								data-lazy="true"><blockquote  class="twitter-tweet" data-lang="en" data-theme="dark"><p lang="en" dir="ltr">the evolution of Twitter&#39;s logo <a href="https://t.co/Zd0Ao16wfj">pic.twitter.com/Zd0Ao16wfj</a></p>&mdash; origins of iconic images (@image_origins) <a href="https://twitter.com/image_origins/status/1683208797479731202?ref_src=twsrc%5Etfw">July 23, 2023</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+																								data-lazy="true">
+																								<blockquote
+																									class="twitter-tweet"
+																									data-lang="en"
+																									data-theme="dark">
+																									<p lang="en"
+																										dir="ltr">the
+																										evolution of
+																										Twitter&#39;s
+																										logo <a
+																											href="https://t.co/Zd0Ao16wfj">pic.twitter.com/Zd0Ao16wfj</a>
+																									</p>&mdash; origins
+																									of iconic images
+																									(@image_origins) <a
+																										href="https://twitter.com/image_origins/status/1683208797479731202?ref_src=twsrc%5Etfw">July
+																										23, 2023</a>
+																								</blockquote>
+																								<script async
+																									src="https://platform.twitter.com/widgets.js"
+																									charset="utf-8"></script>
 																							</div>
 																							<div class="cell"
-																								data-lazy="true"><blockquote  class="twitter-tweet" data-lang="en" data-theme="dark"><p lang="en" dir="ltr">Ruining your relationship over celebrities that don’t even know you is crazy to me <a href="https://t.co/LphkX7N2Lz">https://t.co/LphkX7N2Lz</a></p>&mdash; 𝗕𝗿𝗲𝗲𝘇𝘆’😵‍💫 (@OvOBrezzzy) <a href="https://twitter.com/OvOBrezzzy/status/1683192471621189632?ref_src=twsrc%5Etfw">July 23, 2023</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+																								data-lazy="true">
+																								<blockquote
+																									class="twitter-tweet"
+																									data-lang="en"
+																									data-theme="dark">
+																									<p lang="en"
+																										dir="ltr">
+																										Ruining your
+																										relationship
+																										over celebrities
+																										that don’t even
+																										know you is
+																										crazy to me <a
+																											href="https://t.co/LphkX7N2Lz">https://t.co/LphkX7N2Lz</a>
+																									</p>&mdash;
+																									𝗕𝗿𝗲𝗲𝘇𝘆’😵‍💫
+																									(@OvOBrezzzy) <a
+																										href="https://twitter.com/OvOBrezzzy/status/1683192471621189632?ref_src=twsrc%5Etfw">July
+																										23, 2023</a>
+																								</blockquote>
+																								<script async
+																									src="https://platform.twitter.com/widgets.js"
+																									charset="utf-8"></script>
 																							</div>
 																							<div class="cell"
-																							data-lazy="true"><blockquote  class="twitter-tweet" data-lang="en" data-theme="dark"><p lang="en" dir="ltr">the evolution of Twitter&#39;s logo <a href="https://t.co/Zd0Ao16wfj">pic.twitter.com/Zd0Ao16wfj</a></p>&mdash; origins of iconic images (@image_origins) <a href="https://twitter.com/image_origins/status/1683208797479731202?ref_src=twsrc%5Etfw">July 23, 2023</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-																						</div>
-																						<div class="cell"
-																							data-lazy="true"><blockquote  class="twitter-tweet" data-lang="en" data-theme="dark"><p lang="en" dir="ltr">Ruining your relationship over celebrities that don’t even know you is crazy to me <a href="https://t.co/LphkX7N2Lz">https://t.co/LphkX7N2Lz</a></p>&mdash; 𝗕𝗿𝗲𝗲𝘇𝘆’😵‍💫 (@OvOBrezzzy) <a href="https://twitter.com/OvOBrezzzy/status/1683192471621189632?ref_src=twsrc%5Etfw">July 23, 2023</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-																						</div>
-																					
+																								data-lazy="true">
+																								<blockquote
+																									class="twitter-tweet"
+																									data-lang="en"
+																									data-theme="dark">
+																									<p lang="en"
+																										dir="ltr">the
+																										evolution of
+																										Twitter&#39;s
+																										logo <a
+																											href="https://t.co/Zd0Ao16wfj">pic.twitter.com/Zd0Ao16wfj</a>
+																									</p>&mdash; origins
+																									of iconic images
+																									(@image_origins) <a
+																										href="https://twitter.com/image_origins/status/1683208797479731202?ref_src=twsrc%5Etfw">July
+																										23, 2023</a>
+																								</blockquote>
+																								<script async
+																									src="https://platform.twitter.com/widgets.js"
+																									charset="utf-8"></script>
+																							</div>
+																							<div class="cell"
+																								data-lazy="true">
+																								<blockquote
+																									class="twitter-tweet"
+																									data-lang="en"
+																									data-theme="dark">
+																									<p lang="en"
+																										dir="ltr">
+																										Ruining your
+																										relationship
+																										over celebrities
+																										that don’t even
+																										know you is
+																										crazy to me <a
+																											href="https://t.co/LphkX7N2Lz">https://t.co/LphkX7N2Lz</a>
+																									</p>&mdash;
+																									𝗕𝗿𝗲𝗲𝘇𝘆’😵‍💫
+																									(@OvOBrezzzy) <a
+																										href="https://twitter.com/OvOBrezzzy/status/1683192471621189632?ref_src=twsrc%5Etfw">July
+																										23, 2023</a>
+																								</blockquote>
+																								<script async
+																									src="https://platform.twitter.com/widgets.js"
+																									charset="utf-8"></script>
+																							</div>
+
 																						</div>
 																					</div>
 																				</div>
@@ -4113,22 +4254,21 @@
 												<div class="column-overlay-layer" style=""></div>
 											</div>
 											<div data-tilt data-tilt-perspective="4000" class="wpb_wrapper">
-												<div  id="fws_64bdb7e759185" data-midnight=""
+												<div id="fws_64bdb7e759185" data-midnight=""
 													data-column-margin="default"
 													class="wpb_row vc_row-fluid vc_row inner_row" style="">
 													<div class="row-bg-wrap">
 														<div class="row-bg"></div>
 													</div>
 													<div class="row_col_wrap_12_inner col span_12  left">
-														<div  style=""
+														<div style=""
 															class="vc_col-sm-12 wpb_column column_container vc_column_container col child_column has-animation bg_img_front nectar-mask-reveal-bg nectar-mask-reveal-bg-top-dir nectar-mask-reveal-bg-straight-shape top_padding_desktop_60vh top_padding_tablet_50vh top_padding_phone_40vh "
 															data-using-bg="true" data-border-radius="20px"
 															data-bg-cover="true" data-padding-pos="all"
 															data-has-bg-color="false" data-bg-color=""
 															data-bg-opacity="1" data-animation="grow-in" data-delay="0">
 
-															<div 
-																class="vc_column-inner">
+															<div class="vc_column-inner">
 																<div class="column-image-bg-wrap column-bg-layer viewport-desktop"
 																	data-n-parallax-bg="true"
 																	data-parallax-speed="minimum"
@@ -4213,7 +4353,7 @@
 																		<ul>
 																			<div
 																				style="display: flex; justify-content: space-between;">
-																				<span style="";">1.
+																				<span style="" ;">1.
 																				</span>
 																				<li> Connect your Twitter account and
 																					crypto
@@ -4222,7 +4362,7 @@
 																			</div>
 																			<div
 																				style="display: flex; justify-content: space-between;">
-																				<span style="";">2.
+																				<span style="" ;">2.
 																				</span>
 																				<li>Customise missions
 																					ranging from
@@ -4233,7 +4373,7 @@
 
 																			<div
 																				style="display: flex; justify-content: space-between;">
-																				<span style="";">3.
+																				<span style="" ;">3.
 																				</span>
 																				<li>Engagers can
 																					effortlessly participate in
@@ -4683,7 +4823,7 @@
 														<div class="row-bg"></div>
 													</div>
 													<div class="row_col_wrap_12_inner col span_12  left">
-														<div class="vc_col-sm-12 wpb_column column_container vc_column_container col child_column has-animation no-extra-padding el_spacing_0px inherit_tablet inherit_phone "
+														<div  class="vc_col-sm-12 wpb_column column_container vc_column_container col child_column has-animation no-extra-padding el_spacing_0px inherit_tablet inherit_phone boxaround"
 															data-padding-pos="all" data-has-bg-color="false"
 															data-bg-color="" data-bg-opacity="1"
 															data-animation="fade-in" data-delay="0"
@@ -5216,6 +5356,12 @@
 							<style>
 								.wp-block-heading {
 									color: black !important;
+								}
+
+								.boxaround{
+									background-color: #302a58;
+									padding: 60px !important;
+									border-radius: 20px;
 								}
 							</style>
 							<div id="block-8" class="widget widget_block">
