--- a/index.html
+++ b/index.html
@@ -4036,17 +4036,21 @@
 
 																					blockquote {
 																						max-width: 250px;
-																						height: 600px;
+																						height: 900px;
+
 																					}
 
 																					.flickity-slider {
 																						width: 120% !important;
 																					}
+																					.cell{
+																						padding-top: 100px;
+																					}
 																				</style>
 
 																	
 
-<div  class="nectar-flickity not-initialized instace-64bdb7e758474"
+<div class="nectar-flickity not-initialized instace-64bdb7e758474"
 data-indicator-bg="#a1fccb"
 data-indicator-icon="#2f2a58"
 data-touch-icon-color="default"
