--- a/index.html
+++ b/index.html
@@ -925,11 +925,11 @@
 		}
 
 		#ajax-content-wrap .vc_row.inner_row.left_padding_25vw .row_col_wrap_12_inner {
-			padding-left: 25vw;
+			padding-left: 3vw;
 		}
 
 		#ajax-content-wrap .vc_row.inner_row.right_padding_25vw .row_col_wrap_12_inner {
-			padding-right: 25vw;
+			padding-right: 3vw;
 		}
 
 		.vc_row.inner_row.bottom_position_desktop_30px {
@@ -4045,6 +4045,7 @@
 																					}
 																					.cell{
 																						padding-top: 100px;
+																						width: 25% !important;
 																					}
 																				</style>
 
@@ -4071,7 +4072,8 @@ data-controls="touch_total">
 		<div class="cell"
 			data-lazy="true">
 			<blockquote class="twitter-tweet" data-lang="en" data-theme="dark"><p lang="en" dir="ltr">Giveaway worth over $300 of <a href="https://twitter.com/FunApes_NFT?ref_src=twsrc%5Etfw">@FunApes_NFT</a> to celebrate this collection! <br><br>To enter:<br>1️⃣ Retweet <br>2️⃣ Follow <a href="https://twitter.com/Jamestownkings?ref_src=twsrc%5Etfw">@Jamestownkings</a> &amp; <a href="https://twitter.com/ape_tank?ref_src=twsrc%5Etfw">@ape_tank</a> <br>3️⃣ Tag 3 people<br>4️⃣ Be live in the space below!<br><br>Winner will be picked live in the space!👇<a href="https://twitter.com/hashtag/APETANK?src=hash&amp;ref_src=twsrc%5Etfw">#APETANK</a> <a href="https://twitter.com/hashtag/FUNAPESNFT?src=hash&amp;ref_src=twsrc%5Etfw">#FUNAPESNFT</a> <a href="https://twitter.com/hashtag/GIVEAWAY?src=hash&amp;ref_src=twsrc%5Etfw">#GIVEAWAY</a> <a href="https://t.co/kryWC1Ae5D">https://t.co/kryWC1Ae5D</a></p>&mdash; Jamestownkings.eth (@Jamestownkings) <a href="https://twitter.com/Jamestownkings/status/1658483733060804609?ref_src=twsrc%5Etfw">May 16, 2023</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>		</div>
-		<div class="cell"
+		
+			<div class="cell"
 			data-lazy="true">
 			<blockquote class="twitter-tweet" data-lang="en" data-theme="dark"><p lang="en" dir="ltr">Fun Apes Radio Vol.12 🐒<a href="https://twitter.com/Jahncrypto?ref_src=twsrc%5Etfw">@Jahncrypto</a> will be joined by <a href="https://twitter.com/thenighguy?ref_src=twsrc%5Etfw">@thenighguy</a> the founder of <a href="https://twitter.com/puffpandas?ref_src=twsrc%5Etfw">@puffpandas</a> on Wednesday at 4PM EST.<br><br>Giving away 1x <a href="https://twitter.com/hashtag/FunApesNFT?src=hash&amp;ref_src=twsrc%5Etfw">#FunApesNFT</a> on this tweet!<br>🐒RT + Tag 3<br>🐒Follow <a href="https://twitter.com/Jahncrypto?ref_src=twsrc%5Etfw">@Jahncrypto</a> <a href="https://twitter.com/thenighguy?ref_src=twsrc%5Etfw">@thenighguy</a> <br><br>Be in this space👇<a href="https://t.co/lBpKxlZvJb">https://t.co/lBpKxlZvJb</a> <a href="https://t.co/sFCX6qSHyW">pic.twitter.com/sFCX6qSHyW</a></p>&mdash; Fun Apes (@FunApes_NFT) <a href="https://twitter.com/FunApes_NFT/status/1658567323509313556?ref_src=twsrc%5Etfw">May 16, 2023</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>		</div>
 		<div class="cell"
@@ -5220,7 +5222,7 @@ data-lazy="true">
 									<li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-113"><a
 											href="partners/index.html">Partners</a></li>
 									<li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-114"><a
-											href="#">Leaderboard</a></li>
+											href="/comingsoon.html">Leaderboard</a></li>
 									<li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-115"><a
 											href="partner-application/index.html">Partner Application</a></li>
 
