--- a/index.html
+++ b/index.html
@@ -1557,7 +1557,7 @@
 			position: absolute;
 			left: 0;
 			top: 0;
-			z-index: -1;
+			z-index: 1;
 		}
 
 		.nectar-highlighted-text .nectar-scribble path {
@@ -5544,8 +5544,7 @@
 																		data-list-icon="none" data-animation="false"
 																		data-animation-delay="0"
 																		data-color="accent-color" data-spacing="10px"
-																		data-alignment="left"> Please
-																		get in touch with
+																		data-alignment="left"> Please get in touch with
 																		our team below. Kindly provide any relevant
 																		information and links related to your project.
 																	</div>
