--- a/index.html
+++ b/index.html
@@ -2231,7 +2231,7 @@
 
 		@media only screen and (min-width:1000px) {
 			body .row .nectar-text-inline-images.font_size_desktop_4vw * {
-				font-size: 5vw;
+				font-size: 4vw;
 				line-height: 1.4;
 			}
 		}
@@ -3491,7 +3491,7 @@
 										</li>
 										<li id="menu-item-114"
 											class="menu-item menu-item-type-custom menu-item-object-custom nectar-regular-menu-item menu-item-114">
-											<a href="#"><span class="menu-title-text">Leaderboard</span></a>
+											<a href="/comingsoon.html"><span class="menu-title-text">Leaderboard</span></a>
 										</li>
 										<li id="menu-item-115"
 											class="menu-item menu-item-type-custom menu-item-object-custom nectar-regular-menu-item menu-item-115">
