--- a/partner-application/index.html
+++ b/partner-application/index.html
@@ -1191,7 +1191,8 @@
 										</li>
 										<li id="menu-item-114"
 											class="menu-item menu-item-type-custom menu-item-object-custom nectar-regular-menu-item menu-item-114">
-											<a href="#"><span class="menu-title-text">Leaderboard</span></a>
+											<a href="/comingsoon.html"><span
+													class="menu-title-text">Leaderboard</span></a>
 										</li>
 										<li id="menu-item-115"
 											class="menu-item menu-item-type-custom menu-item-object-custom current-menu-item nectar-regular-menu-item menu-item-115">
@@ -1361,32 +1362,32 @@
 												</div>
 												<form name="contact" method="POST" netlify>
 													<p>
-														<label>Name: <input type="text" name="name" /></label>
+														<label>Name* <input type="text" name="name" /></label>
 													</p>
 													<p>
-														<label>Email: <input type="email" name="email" /></label>
+														<label>Email* <input type="email" name="email" /></label>
 													</p>
 													<p>
-														<label>Twitter Handle: <input type="text"
+														<label>Twitter Handle* <input type="text"
 																name="twitter" /></label>
 
 													</p>
 													<p>
-														<label>Your Community: <textarea
+														<label>Your Community* <textarea
 																name="community"></textarea></label>
 													</p>
 													<p>
-														<label>Position: <textarea name="position"></textarea></label>
+														<label>Position* <textarea name="position"></textarea></label>
 													</p>
 													<p>
-														<label>Subject: <textarea name="subject"></textarea></label>
+														<label>Subject* <textarea name="subject"></textarea></label>
 													</p>
 													<p>
-														<label>Your Message (Optional): <textarea rows="10"
+														<label>Your Message (Optional) <textarea rows="10"
 																name="message"></textarea></label>
 													</p>
 													<p>
-														<button style="z-index: 10000;" type="submit">Send</button>
+														<button style="z-index: 10000;" type="submit">Submit Request</button>
 													</p>
 												</form>
 											</div>
@@ -1605,7 +1606,7 @@
 									<li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-113"><a
 											href="../partners/index.html">Partners</a></li>
 									<li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-114"><a
-											href="#">Leaderboard</a></li>
+											href="/comingsoon.html">Leaderboard</a></li>
 									<li
 										class="menu-item menu-item-type-custom menu-item-object-custom current-menu-item menu-item-115">
 										<a href="index.html" aria-current="page">Partner Application</a>
